syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.turkcell.pasaj.client";

service ClientService {
  rpc ExecuteClient(ClientRequest) returns (ClientResponse) {};
}

message ClientRequest {
  string status=1;
}
message ClientResponse {
  google.protobuf.Timestamp my_field = 1;
}